Fix: WARNING: Implicit use ... is deprecated, use -M